# Cipherz

./: .gitignore  03. Kriptografi Simetrik-Asimetrik.pptx  ANALISIS_BENCHMARK.md  Cargo.toml  DOCUMENTATION.md  Makefile  README.md  benchmark_metrics.py  benchmark_results.csv  benchmark_summary.csv  install.ps1  install.sh  main.c
.github/workflows/: release.yml
artifacts/benchmark/: ANALISIS_BENCHMARK.md  benchmark_results.csv  benchmark_summary.csv
benches/: block_cipher.rs
c/: Makefile
c/src/: main.c
scripts/: benchmark_metrics.py  package_release.py
src/: gpui_app.rs  lib.rs  main.rs
src/gpui_app/: app.rs  io.rs
tugas_block_cipher_c/: Makefile  README.md
tugas_block_cipher_rust/: Cargo.toml
tugas_block_cipher_rust/src/: gpui_app.rs  lib.rs
